fix overflow container

--- a/src/App.css
+++ b/src/App.css
@@ -272,6 +272,7 @@ body {
   width: 100%;
   height: 100vh;
   align-items: center;
+  /* overflow: hidden; */
 }
 
 #form-container {
@@ -283,6 +284,7 @@ body {
   height: 50%;
   padding: 0 2rem;
   border: 2px solid #314e1c;
+  overflow: hidden;
 }
 
 .container .row {
